--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-TOKEN = MTE4NjgzMDYwNTM4NDY5NTkwOQ.GsTSSH.mzyHtru0Rad3Ftro6ep2_yHdLx0YoyaKYp14EA
+TOKEN = MTE4NjgzMDYwNTM4NDY5NTkwOQ.GNwIaU.3Oy27qSSextWha-NEOI2hVWd4tF4TLJH9hyQXk
