--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-TOKEN = MTE4NjgzMDYwNTM4NDY5NTkwOQ.GNwIaU.3Oy27qSSextWha-NEOI2hVWd4tF4TLJH9hyQXk
+TOKEN = MTE4NjgzMDYwNTM4NDY5NTkwOQ.G5tyvn.Pa6MnYBoFPGIE0gh5gFK3Ltde7dsKgCGN3cL70
+LOLZ = haha
